--- a/public/examples/summer-email.html
+++ b/public/examples/summer-email.html
@@ -36,7 +36,7 @@
   </style>
   <div class='email-wrap'>
     <div class='email-container'>
-      <img src="http://www.sjiassociates.com/sjilogo-orange-26.png" alt="sjiLogo" style="float:left;padding:1px 10px 0 0">
+      <img src="../img/SJI_logo_circle.png" alt="sjiLogo" style="float:left;padding:1px 10px 0 0" width='27px' height='27px'>
       <span style="color:#4a482c"><strong>Suzy Jurist,</strong> President  | <strong>SJI Associates</strong> | <strong>Direct:</strong> 212.391.7004 | <strong> Main:</strong> 212.391.7770 | <strong> Mobile:</strong> 917.951.2861</span>
 
       <br>
