Added Lorem ispum for discovery icons

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,6 @@
           <nav class='flex flex-col flex-wrap ml-1'>
             <a href='/website.html#type' class='my-1 py-1 px-3 hover:bg-gray-300 rounded hover:text-black duration-500'>Typography</a>
             <a href='/website.html#mods' class='my-1 py-1 px-3 hover:bg-gray-300 rounded hover:text-black duration-500'>Components</a>
-            <a href='/website.html#images' class='my-1 py-1 px-3 hover:bg-gray-300 rounded hover:text-black duration-500'>Imagry</a>
           </nav>
         </div>
       </div>
@@ -299,7 +298,8 @@
                 <polygon class="1st3" style="fill: #545977" points="301.1,234.3 245.1,267.3 244.5,333.5 300.1,365.6 358.2,332.6 357.7,267 	"/>
                 </g>
                 </svg>
-              <h3>Discovery</h3>
+              <h3 class='font-bold'>Discovery</h3>
+              <p class='text-left px-3'>Lorem ipsum explanation about when to use this icon</p>
             </div>
             <div class='w-1/3'>
               <svg width="132" viewBox="0 0 600 600" class='mx-auto'>
@@ -326,7 +326,8 @@
                   <polygon class="st10" points="241.5,190.3 242.3,399.4 420.3,295.9 390.3,278.2 	"/>
                 </g>
               </svg>
-              <h3>Branding</h3>
+              <h3 class='font-bold'>Branding</h3>
+              <p class='text-left px-3'>Lorem ipsum explanation about when to use this icon</p>
             </div>
             <div class='w-1/3'>
               <svg width='132' viewBox="0 0 600 600" class='mx-auto'>
@@ -353,7 +354,8 @@
                 	<polygon class="st13" points="351.2,268.2 246.7,203.4 246.7,203.9 248.8,331.8 353.3,396.6 353.3,396.1 	"/>
                 </g>
                 </svg>
-                <h3>engagement</h3>
+                <h3 class='font-bold'>engagement</h3>
+                <p class='text-left px-3'>Lorem ipsum explanation about when to use this icon</p>
             </div>
           </article>
           <article class='flex flex-wrap w-full mb-10 p-10 bg-gray-300 '>
